# fh-sdk

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Doxyfile  DoxygenLayout.xml  LICENSE_HEADER  README.md  SECURITY.md  THIRD_PARTY_NOTICES  library.json  run_coverage.sh
.github/: ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
cmake/: foresthubConfig.cmake.in
docs/: agents.md  embedded.md  getting-started.md  hal.md  providers.md  rag.md
docs/doxygen/: foresthub-doxygen.css  header.html  namespaces.dox
examples/embedded/agent/: platformio.ini
examples/embedded/agent/src/: main.cpp
examples/embedded/anthropic/agent/: platformio.ini
examples/embedded/anthropic/chat/: platformio.ini
examples/embedded/blink/: platformio.ini
examples/embedded/blink/src/: main.cpp
examples/embedded/chat/: platformio.ini
examples/embedded/console_test/: platformio.ini
examples/embedded/http_test/: platformio.ini
examples/embedded/output/: platformio.ini
examples/embedded/ticker/: platformio.ini
examples/pc/: CMakeLists.txt  agent.cpp  chat.cpp  output_debug.cpp  platform_setup.hpp
examples/pc/anthropic/: agent.cpp  chat.cpp  structured_output.cpp  websearch.cpp
examples/pc/foresthub/: agent.cpp  chat.cpp  rag.cpp  structured_output.cpp  websearch.cpp
examples/pc/gemini/: agent.cpp  chat.cpp  structured_output.cpp  websearch.cpp
examples/pc/openai/: agent.cpp  chat.cpp  structured_output.cpp  websearch.cpp
examples/pc/utility/: console_test.cpp
include/foresthub/: client.hpp
include/foresthub/agent/: agent.hpp  handoff.hpp  runner.hpp
include/foresthub/config/: config.hpp
include/foresthub/core/: http_client.hpp  input.hpp  model.hpp  options.hpp  provider.hpp  serialization.hpp  tools.hpp  types.hpp
include/foresthub/hal/: console.hpp  crypto.hpp  gpio.hpp  http_client.hpp  network.hpp  platform.hpp  time.hpp
include/foresthub/llm/: client.hpp  config.hpp  http_client.hpp  input.hpp  model.hpp  options.hpp  provider.hpp  serialization.hpp  tools.hpp  types.hpp
include/foresthub/platform/: console.hpp  crypto.hpp  gpio.hpp  network.hpp  platform.hpp  platform_config.hpp  time.hpp
include/foresthub/rag/: retriever.hpp  types.hpp
include/foresthub/util/: json.hpp  optional.hpp  schema.hpp  strprintf.hpp  ticker.hpp
pio/build_test/: platformio.ini
pio/build_test/src/: main.cpp
scripts/: add_license_headers.sh  run_coverage.sh
src/: CMakeLists.txt  client.cpp
src/agent/: agent.cpp  runner.cpp
src/core/: serialization.cpp
src/hal/arduino/: board_wifi.hpp  console.cpp  console.hpp  crypto.cpp  crypto.hpp  gpio.cpp  gpio.hpp  http_client.cpp  http_client.hpp  network.cpp  network.hpp  platform.cpp  platform.hpp  time.cpp  time.hpp
src/hal/common/: tls_certificates.hpp
src/hal/pc/: console.cpp  console.hpp  crypto.cpp  crypto.hpp  gpio.cpp  gpio.hpp  http_client.cpp  http_client.hpp  network.cpp  network.hpp  platform.cpp  platform.hpp  time.cpp  time.hpp
src/hal/pc/debug/: console.cpp  console.hpp  gpio.cpp  gpio.hpp  platform.cpp  platform.hpp
src/llm/: client.cpp  serialization.cpp
src/llm/agent/: agent.cpp  runner.cpp
src/llm/provider/remote/: schema_utils.cpp  schema_utils.hpp
src/llm/provider/remote/anthropic/: mapping.cpp  mapping.hpp  provider.cpp  provider.hpp
src/llm/provider/remote/foresthub/: provider.cpp  provider.hpp
src/llm/provider/remote/gemini/: mapping.cpp  mapping.hpp  provider.cpp  provider.hpp
src/llm/provider/remote/openai/: mapping.cpp  mapping.hpp  provider.cpp  provider.hpp
src/llm/rag/: serialization.cpp  serialization.hpp
src/llm/rag/remote/: retriever.cpp  retriever.hpp
src/platform/arduino/: board_core.hpp  board_defs.hpp  board_wifi.hpp  console.cpp  console.hpp  crypto.cpp  crypto.hpp  gpio.cpp  gpio.hpp  http_client.cpp  http_client.hpp  network.cpp  network.hpp  platform.cpp  platform.hpp  time.cpp  time.hpp
src/platform/common/: tls_certificates.hpp
src/platform/pc/: console.cpp  console.hpp  crypto.cpp  crypto.hpp  gpio.cpp  gpio.hpp  http_client.cpp  http_client.hpp  network.cpp  network.hpp  platform.cpp  platform.hpp  time.cpp  time.hpp
src/platform/pc/debug/: platform.hpp
src/provider/remote/: forest_hub.cpp  schema_utils.cpp  schema_utils.hpp
src/provider/remote/anthropic/: mapping.cpp  mapping.hpp  provider.cpp
src/provider/remote/foresthub/: provider.cpp
src/provider/remote/gemini/: mapping.cpp  mapping.hpp  provider.cpp
src/provider/remote/openai/: mapping.cpp  mapping.hpp  provider.cpp
src/rag/: serialization.cpp  serialization.hpp
src/rag/remote/: retriever.cpp
src/util/: schema.cpp
tests/: .clang-tidy  CMakeLists.txt
tests/agent/: agent_test.cpp  runner_test.cpp
tests/contract/: foresthub_api_test.cpp
tests/core/: client_test.cpp  input_test.cpp  json_test.cpp  model_test.cpp  options_test.cpp  tools_test.cpp  types_test.cpp
tests/hal/: console_test.cpp  debug_console_test.cpp  debug_gpio_test.cpp  gpio_test.cpp  platform_test.cpp
tests/integration/: client_routing_test.cpp  runner_provider_test.cpp
tests/llm/: client_test.cpp  input_test.cpp  json_test.cpp  model_test.cpp  options_test.cpp  tools_test.cpp  types_test.cpp
tests/llm/agent/: agent_test.cpp  runner_test.cpp
tests/llm/contract/: foresthub_api_test.cpp
tests/llm/integration/: client_routing_test.cpp  runner_provider_test.cpp
tests/llm/provider/: anthropic_test.cpp  foresthub_test.cpp  gemini_test.cpp  openai_test.cpp  schema_utils_test.cpp
tests/llm/rag/: retriever_test.cpp
tests/mocks/: mock_http_client.hpp  mock_llm_client.hpp  mock_provider.hpp
tests/platform/: console_test.cpp  gpio_test.cpp  platform_test.cpp
tests/provider/: anthropic_test.cpp  forest_hub_test.cpp  foresthub_test.cpp  gemini_test.cpp  openai_test.cpp  schema_utils_test.cpp
tests/rag/: retriever_test.cpp
tests/util/: optional_test.cpp  schema_test.cpp  strprintf_test.cpp  ticker_test.cpp
(+86 files in other folders)
